# travel-concierge

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_mcp_server.py
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  SUBMIT.md  WRITEUP.md
notebooks/: kaggle_demo.ipynb
src/travel_concierge/: __init__.py  __main__.py  config.py  runner.py
src/travel_concierge/agents/: budget_agent.py  coordinator.py  itinerary_agent.py  local_info_agent.py  weather_agent.py
src/travel_concierge/mcp_server/: __main__.py  server.py
src/travel_concierge/security/: guards.py
src/travel_concierge/tools/: function_tools.py  travel_apis.py
tests/: test_currency_fallback.py  test_security.py
